# agentic-ai

agents_tutorial/: .gitignore  README.md  pyproject.toml
agents_tutorial/src/agents_tutorial/: crew.py  main.py
agents_tutorial/src/agents_tutorial/config/: tasks.yaml
