[project]
name = "agents_tutorial"
version = "0.1.0"
description = "agents_tutorial using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
agents_tutorial = "agents_tutorial.main:run"
run_crew = "agents_tutorial.main:run"
train = "agents_tutorial.main:train"
replay = "agents_tutorial.main:replay"
test = "agents_tutorial.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
